--- a/index.html
+++ b/index.html
@@ -44,12 +44,20 @@
               class="contacts-link-phone-mail"
               href="mailto:info@devstudio.com"
               lang="en"
-              >info@devstudio.com</a
-            >
+              >
+              <svg class="nav-icon" width="16" height="12">
+                <use href="./img/svg/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts-link">
             <a class="contacts-link-phone-mail" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              >
+              <svg class="nav-icon" width="10" height="16">
+                <use href="./img/svg/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -58,7 +66,7 @@
     <!--Далі іде блок меін-->
     <main>
       <!--Перша секція "замовити послугу"-->
-      <section class="try-us section-hero">
+      <section class="try-us-hero">
         <div class="conteiner tryheader">
           <h1 class="hero-header-class">
             Ефективні рішення для вашого бізнесу
@@ -72,6 +80,12 @@
           <h2 hidden>Наші переваги</h2>
           <ul class="menu-strong">
             <li class="bests-list">
+              <div class="icon-bests">
+                <svg class="pictures-icon" width="70" hight="70">
+                  <use href="./img/svg/icons.svg#icon-antenna">
+                  </use>
+                </svg>
+              </div>
               <h3 class="list-strong-item">Увага до деталей</h3>
               <p class="text-strong-item">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -79,6 +93,12 @@
               </p>
             </li>
             <li class="bests-list">
+              <div class="icon-bests">
+                <svg class="pictures-icon" width="70" hight="70">
+                  <use href="./img/svg/icons.svg#icon-clock">
+                  </use>
+                </svg>
+              </div>
               <h3 class="list-strong-item">Пунктуальність</h3>
               <p class="text-strong-item">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -86,12 +106,24 @@
               </p>
             </li>
             <li class="bests-list">
+              <div class="icon-bests">
+                <svg class="pictures-icon" width="70" hight="70">
+                  <use href="./img/svg/icons.svg#icon-diagram">
+                  </use>
+                </svg>
+              </div>
               <h3 class="list-strong-item">Планування</h3>
               <p class="text-strong-item">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="bests-list">
+              <div class="icon-bests">
+                <svg class="pictures-icon" width="70" hight="70">
+                  <use href="./img/svg/icons.svg#icon-astronaut">
+                  </use>
+                </svg>
+              </div>
               <h3 class="list-strong-item">Сучасні технології</h3>
               <p class="text-strong-item">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -138,7 +170,7 @@
         <div class="conteiner">
           <h2 class="text-portfolio-mail teamcolor">Наша команда</h2>
           <ul class="team-menu">
-            <li>
+            <li class="team-members">
               <img
                 class="teampicture"
                 src="./img/Team/demyanenko.jpg"
@@ -149,9 +181,39 @@
               <div class="team-discription">
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-profession">Product Designer</p>
+                <ul class="social-items">
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-instagram"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-twitter"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-facebook"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li>
+            <li class="team-members">
               <img
                 class="teampicture"
                 src="./img/Team/repina.jpg"
@@ -162,9 +224,39 @@
               <div class="team-discription">
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p lang="en" class="team-profession">Frontend Developer</p>
+                <ul class="social-items">
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-instagram"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-twitter"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-facebook"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li class="social-items-links">
+                    <a href="" class="social-link-push">
+                    <svg class="social-links" width="20" height="20">
+                      <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                    </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
-            <li>
+            <li class="team-members">
               <img
                 class="teampicture"
                 src="./img/Team/tarasov.jpg"
@@ -175,9 +267,39 @@
             <div class="team-discription">
               <h3 class="team-name">Микола Тарасов</h3>
               <p lang="en" class="team-profession">Marketing</p>
+              <ul class="social-items">
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                  </a>
+                </li>
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                  </a>
+                </li>
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                  </a>
+                </li>
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             </li>
-            <li>
+            <li class="team-members">
               <img
                 class="teampicture"
                 src="./img/Team/ermakov.jpg"
@@ -188,6 +310,36 @@
             <div class="team-discription">
               <h3 class="team-name">Михайло Єрмаков</h3>
               <p lang="en" class="team-profession">UI Designer</p>
+              <ul class="social-items">
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                  </a>
+                </li>
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                  </a>
+                </li>
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                  </a>
+                </li>
+                <li class="social-items-links">
+                  <a href="" class="social-link-push">
+                  <svg class="social-links" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
             </li>
           </ul>
