--- a/index.html
+++ b/index.html
@@ -346,36 +346,123 @@
         </div>
       </section>
     </main>
+      <!-- NEW SECTION HW4 Clints -->
+    <section class="clients">
+      <div class="conteiner">
+        <h2 class="text-clients">Постійні клієнти</h2>
+        <ul class="item-clients">
+          <li class="list-clients">
+            <a href="" class="link-clients">
+              <svg class="logo-clients" width="41" height="47">
+                <use href="./img/svg/icons.svg#icon-yaco"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-clients">
+            <a href="" class="link-clients">
+              <svg class="logo-clients" width="40" height="52">
+                <use href="./img/svg/icons.svg#icon-companywindows"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-clients">
+            <a href="" class="link-clients">
+              <svg class="logo-clients" width="43" height="41">
+                <use href="./img/svg/icons.svg#icon-company"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-clients">
+            <a href="" class="link-clients">
+              <svg class="logo-clients" width="84" height="41">
+                <use href="./img/svg/icons.svg#icon-fosterpetters"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-clients">
+            <a href="" class="link-clients">
+              <svg class="logo-clients" width="63" height="45">
+                <use href="./img/svg/icons.svg#icon-brand"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list-clients">
+            <a href="" class="link-clients">
+              <svg class="logo-clients" width="94" height="44">
+                <use href="./img/svg/icons.svg#icon-tagline"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+
     <!--Далі йдемо до підвалу-->
     <footer class="footer-main">
-      <div class="conteiner">
-        <a class="logo-button" href="/." lang="en">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio logo-studio-footer">Studio</span></a
-        >
-        <address class="father-adress">
-          <ul class="footer-adress-menu">
-            <li class="footer-links">
-              <a
-                class="footer-contact-link mailto"
-                href="https://goo.gl/maps/aKqt5xky7KFVWU1r5"
-                target="_blank"
-                rel="noopener noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-links">
-              <a class="footer-contact-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-links">
-              <a class="footer-contact-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+      <div class="conteiner footer-parts">
+        <div class="footer-left-part">
+          <a class="logo-button" href="/." lang="en">
+            <span class="logo-web">Web</span
+            ><span class="logo-studio logo-studio-footer">Studio</span>
+            </a>
+          <address class="father-adress">
+            <ul class="footer-adress-menu">
+              <li class="footer-links">
+                <a
+                  class="footer-contact-link mailto"
+                  href="https://goo.gl/maps/aKqt5xky7KFVWU1r5"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-links">
+                <a class="footer-contact-link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-links">
+                <a class="footer-contact-link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-rigth-part">
+          <h3 class="right-text">приєднуйтесь</h3>
+            <ul class="right-item">
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+        </div>
       </div>
     </footer>
   </body>
