--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,7 @@
               <a class="menu-link" href="./index.html"> Студія </a>
             </li>
             <li class="menu-item">
-              <a class="menu-link current" href="./portfolio.html">
-                Портфоліо
-              </a>
+              <a class="menu-link current" href="./portfolio.html"> Портфоліо </a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href=""> Контакти </a>
@@ -46,12 +44,20 @@
               class="contacts-link-phone-mail"
               href="mailto:info@devstudio.com"
               lang="en"
-              >info@devstudio.com</a
-            >
+              >
+              <svg class="nav-icon" width="16" height="12">
+                <use href="./img/svg/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts-link">
             <a class="contacts-link-phone-mail" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              >
+              <svg class="nav-icon" width="10" height="16">
+                <use href="./img/svg/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -214,34 +220,69 @@
     </main>
     <!--Footer-->
     <footer class="footer-main">
-      <div class="conteiner">
-        <a class="logo-button" href="/." lang="en">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio logo-studio-footer">Studio</span></a
-        >
-        <address class="father-adress">
-          <ul class="footer-adress-menu">
-            <li class="footer-links">
-              <a
-                class="footer-contact-link mailto"
-                href="https://goo.gl/maps/aKqt5xky7KFVWU1r5"
-                target="_blank"
-                rel="noopener noreferrer"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-links">
-              <a class="footer-contact-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li class="footer-links">
-              <a class="footer-contact-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+      <div class="conteiner footer-parts">
+        <div class="footer-left-part">
+          <a class="logo-button" href="/." lang="en">
+            <span class="logo-web">Web</span
+            ><span class="logo-studio logo-studio-footer">Studio</span>
+            </a>
+          <address class="father-adress">
+            <ul class="footer-adress-menu">
+              <li class="footer-links">
+                <a
+                  class="footer-contact-link mailto"
+                  href="https://goo.gl/maps/aKqt5xky7KFVWU1r5"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-links">
+                <a class="footer-contact-link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-links">
+                <a class="footer-contact-link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-rigth-part">
+          <h3 class="right-text">приєднуйтесь</h3>
+            <ul class="right-item">
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="rigth-list">
+                <a href="" class="right-link">
+                  <svg class="right-icon" width="20" height="20">
+                    <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+        </div>
       </div>
     </footer>
   </body>
