--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
               <a class="menu-link" href="./index.html"> Студія </a>
             </li>
             <li class="menu-item">
-              <a class="menu-link current" href="./portfolio.html"> Портфоліо </a>
+              <a class="menu-link current" href="./portfolio.html">
+                Портфоліо
+              </a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href=""> Контакти </a>
@@ -44,7 +46,7 @@
               class="contacts-link-phone-mail"
               href="mailto:info@devstudio.com"
               lang="en"
-              >
+            >
               <svg class="nav-icon" width="16" height="12">
                 <use href="./img/svg/icons.svg#icon-envelope"></use>
               </svg>
@@ -52,8 +54,7 @@
             </a>
           </li>
           <li class="contacts-link">
-            <a class="contacts-link-phone-mail" href="tel:+380961111111"
-              >
+            <a class="contacts-link-phone-mail" href="tel:+380961111111">
               <svg class="nav-icon" width="10" height="16">
                 <use href="./img/svg/icons.svg#icon-smartphone"></use>
               </svg>
@@ -95,10 +96,10 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">
-              <h2 class="name-picture-section">Технокряк</h2>
-              <p class="caption-picture-section">Веб-сайт</p>
-            </div>
+              <div class="options-discription">
+                <h2 class="name-picture-section">Технокряк</h2>
+                <p class="caption-picture-section">Веб-сайт</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -107,12 +108,12 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">
-              <h2 class="name-picture-section">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="caption-picture-section">Дизайн</p>
-            </div>
+              <div class="options-discription">
+                <h2 class="name-picture-section">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="caption-picture-section">Дизайн</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -121,12 +122,12 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">  
-              <h2 class="name-picture-section">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="caption-picture-section">Додаток</p>
-            </div>
+              <div class="options-discription">
+                <h2 class="name-picture-section">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="caption-picture-section">Додаток</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -135,13 +136,12 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">
-              <h2 class="name-picture-section">
-                Проєкт <span lang="en">Prime</span>
-              </h2>
-              <p class="caption-picture-section">Маркетинг</p>
-            </div>
-              
+              <div class="options-discription">
+                <h2 class="name-picture-section">
+                  Проєкт <span lang="en">Prime</span>
+                </h2>
+                <p class="caption-picture-section">Маркетинг</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -150,13 +150,12 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">
-              <h2 class="name-picture-section">
-                Проєкт <span lang="en">Boxes</span>
-              </h2>
-              <p class="caption-picture-section">Додаток</p>
-            </div>
-  
+              <div class="options-discription">
+                <h2 class="name-picture-section">
+                  Проєкт <span lang="en">Boxes</span>
+                </h2>
+                <p class="caption-picture-section">Додаток</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -165,12 +164,12 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">
-              <h2 class="name-picture-section">
-              <span lang="en">Inspiration has no Borders</span>
-            </h2>
-            <p class="caption-picture-section">Веб-сайт</p>
-          </div>
+              <div class="options-discription">
+                <h2 class="name-picture-section">
+                  <span lang="en">Inspiration has no Borders</span>
+                </h2>
+                <p class="caption-picture-section">Веб-сайт</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -179,12 +178,12 @@
                 width="370"
                 height="294"
               />
-            <div class="options-discription">
-              <h2 class="name-picture-section">
-              Видання <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="caption-picture-section">Дизайн</p>
-            </div>
+              <div class="options-discription">
+                <h2 class="name-picture-section">
+                  Видання <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="caption-picture-section">Дизайн</p>
+              </div>
             </li>
             <li class="lists-blocks">
               <img
@@ -195,7 +194,7 @@
               />
               <div class="options-discription">
                 <h2 class="name-picture-section">
-                Проєкт <span lang="en">Lab</span>
+                  Проєкт <span lang="en">Lab</span>
                 </h2>
                 <p class="caption-picture-section">Маркетинг</p>
               </div>
@@ -225,7 +224,7 @@
           <a class="logo-button" href="/." lang="en">
             <span class="logo-web">Web</span
             ><span class="logo-studio logo-studio-footer">Studio</span>
-            </a>
+          </a>
           <address class="father-adress">
             <ul class="footer-adress-menu">
               <li class="footer-links">
@@ -252,36 +251,36 @@
         </div>
         <div class="footer-rigth-part">
           <h3 class="right-text">приєднуйтесь</h3>
-            <ul class="right-item">
-              <li class="rigth-list">
-                <a href="" class="right-link">
-                  <svg class="right-icon" width="20" height="20">
-                    <use href="./img/svg/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="rigth-list">
-                <a href="" class="right-link">
-                  <svg class="right-icon" width="20" height="20">
-                    <use href="./img/svg/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="rigth-list">
-                <a href="" class="right-link">
-                  <svg class="right-icon" width="20" height="20">
-                    <use href="./img/svg/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="rigth-list">
-                <a href="" class="right-link">
-                  <svg class="right-icon" width="20" height="20">
-                    <use href="./img/svg/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+          <ul class="right-item">
+            <li class="rigth-list">
+              <a href="" class="right-link">
+                <svg class="right-icon" width="20" height="20">
+                  <use href="./img/svg/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="rigth-list">
+              <a href="" class="right-link">
+                <svg class="right-icon" width="20" height="20">
+                  <use href="./img/svg/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="rigth-list">
+              <a href="" class="right-link">
+                <svg class="right-icon" width="20" height="20">
+                  <use href="./img/svg/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="rigth-list">
+              <a href="" class="right-link">
+                <svg class="right-icon" width="20" height="20">
+                  <use href="./img/svg/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
