--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
           </address>
         </div>
         <div class="footer-rigth-part">
-          <h3 class="right-text">приєднуйтесь</h3>
+          <p class="right-text">приєднуйтесь</p>
             <ul class="right-item">
               <li class="rigth-list">
                 <a href="" class="right-link">
