--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,7 @@
           <!--UL з картинками-->
           <ul class="pictures-list">
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/mac.jpg"
                 alt="Макбук"
@@ -100,8 +101,10 @@
                 <h2 class="name-picture-section">Технокряк</h2>
                 <p class="caption-picture-section">Веб-сайт</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/basketball.jpg"
                 alt="Баскетбол"
@@ -114,8 +117,10 @@
                 </h2>
                 <p class="caption-picture-section">Дизайн</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/fish.jpg"
                 alt="Рибамоя"
@@ -128,8 +133,10 @@
                 </h2>
                 <p class="caption-picture-section">Додаток</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/headphone.jpg"
                 alt="навушники"
@@ -142,8 +149,10 @@
                 </h2>
                 <p class="caption-picture-section">Маркетинг</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="img/Pageportfolio/box.jpg"
                 alt="Коробки"
@@ -156,8 +165,10 @@
                 </h2>
                 <p class="caption-picture-section">Додаток</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/monitor.jpg"
                 alt="Монітор"
@@ -170,8 +181,10 @@
                 </h2>
                 <p class="caption-picture-section">Веб-сайт</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/journal.jpg"
                 alt="Журнал"
@@ -184,8 +197,10 @@
                 </h2>
                 <p class="caption-picture-section">Дизайн</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/birka.jpg"
                 alt="Бірка"
@@ -198,8 +213,10 @@
                 </h2>
                 <p class="caption-picture-section">Маркетинг</p>
               </div>
+              </a>  
             </li>
             <li class="lists-blocks">
+              <a class="link-blocks">
               <img
                 src="./img/Pageportfolio/notebook.jpg"
                 alt="Ноутбук"
@@ -212,6 +229,7 @@
                 </h2>
                 <p class="caption-picture-section">Додаток</p>
               </div>
+              </a>  
             </li>
           </ul>
         </div>
@@ -250,7 +268,7 @@
           </address>
         </div>
         <div class="footer-rigth-part">
-          <h3 class="right-text">приєднуйтесь</h3>
+          <p class="right-text">приєднуйтесь</p>
           <ul class="right-item">
             <li class="rigth-list">
               <a href="" class="right-link">
